complete order product